--- a/wp-content/themes/sutunam/scss/page/_product-category.scss
+++ b/wp-content/themes/sutunam/scss/page/_product-category.scss
@@ -541,6 +541,7 @@
                 }
                 .info {
                     width: 100%;
+                    min-height: inherit;
                     h3, h4 {
                         overflow: hidden;
                         text-overflow: ellipsis;
@@ -550,6 +551,7 @@
                 .price {
                     width: 100%;
                     min-height: inherit;
+                    margin-top: 5px;
                 }
             }
         }
